<resources>
    <string name="app_name">Universal Transport</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Nav menu names-->
    <string name="nav_home">Home</string>
    <string name="nav_bus">Bus</string>
    <string name="nav_train">Train</string>
    <string name="nav_rikshaw">Rickshaw</string>
    <string name="nav_cab">Cab</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_map">Map</string>
    <string name="nav_pro">Pro</string>
    <string name="terms_text">I agree to the Terms &amp; Conditions.</string>
</resources>
