<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_action_bus_icon"
            android:title="@string/nav_bus" />
        <item
            android:id="@+id/nav_train"
            android:icon="@drawable/ic_train"
            android:title="@string/nav_train" />
        <item
            android:id="@+id/nav_cab"
            android:icon="@drawable/ic_action_cab"
            android:title="@string/nav_cab" />
        <item
            android:id="@+id/nav_rickshaw"
            android:icon="@drawable/ic_rickshaw"
            android:title="@string/nav_rikshaw" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_ic_map"
            android:title="@string/nav_map" />
    </group>
    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_icn_profile"
            android:title="@string/nav_profile" />

    </group>
</menu>